option for policy file